integration/data/reference/tests/test_trimming_non-2dstring_fields_fails/step_00.ref
error: NotImplemented: Function 'utf8_trim' has no kernel matching input types (uint64)
 --> <input>:1:16
  |
1 | version | trim :uint64
  |                ^^^^^^^ 
  |